--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
     <!-- External stylesheet -->
     <link rel="stylesheet" href="styles/styles.css" />
 
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="container">
-    </div>
-
+     <div class="jumbotron heading">
+       <div class="parallax">
+      <div="heading ">
+  <h1 class="display-4 name">Lita Hernandez</h1>
+  <p class="lead">Hey I think I'm cool so I made a website so you can see how cool I am.</p>
+  <hr class="my-4">
+  </p>
+</div>
+</div>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
