profile pic added

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   </head>
   <body>
      <div class="jumbotron heading">
-       <div class="parallax">
       <div="heading ">
-  <h1 class="display-4 name">Lita Hernandez</h1>
-  <p class="lead">Hey I think I'm cool so I made a website so you can see how cool I am.</p>
-  <hr class="my-4">
-  </p>
-</div>
-</div>
-</div>
+        <h1 class="display-4 name">Lita Hernandez</h1>
+        <p class="lead">Hey I think I'm cool so I made a website so you can see how cool I am.</p>
+        <hr class="my-4">
+      </div>
+      </div>
+  
+    <img class= "profile " src="photos/raven.gif" height="200px" width="200px" alt="temporary">
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
